--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "redux-call-effect",
   "version": "0.0.0",
-  "main": "src/index.js",
+  "main": "lib/index.js",
+  "files": ["lib"],
   "repository": "git@github.com:tomasz-sodzawiczny/redux-call-effect.git",
   "author": "Tomasz Sodzawiczny <tomasz.sodzawiczny@brainly.com>",
   "license": "MIT",
